# bechtrek

./: .gitignore  README.md  bechtrek.cabal  stack.yaml
app/: bechdel.hs  json.hs  yaml.hs
app/startrek/: parse.hs  parsechakoteya.hs  repair.hs
data/: bechdel.cabal  bechtrek-data.cabal  parsescript.hs
data/bechdel/: bechdel.hs
data/bechdel/Data/: Bechdel.hs
data/bechdel/Data/Bechdel/: Util.hs
data/shell/: parse.sh
data/src/Data/: BechTrek.hs
data/src/Data/BechTrek/: Util.hs
data/startrek/: parsechakoteya.hs  parsescript.hs  repair.hs
src/Data/: Bechdel.hs
src/Data/Bechdel/: Script.hs  Util.hs
test/: Spec.hs
