name:                bechtrek
version:             0.1.0.0
synopsis:            Bechdel test computation utilities
description:         Please see README.md
homepage:            https://github.com/ronichoudhury/bechtrek#readme
license:             Apache2
license-file:        LICENSE
author:              Roni Choudhury
maintainer:          Roni Choudhury <aichoudh@gmail.com>
copyright:           Roni Choudhury
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Bechdel
                       Data.Bechdel.Script
                       Data.Bechdel.Util
  build-depends:       base >=4.7 && <5
                     , aeson
                     , unordered-containers
                     , text
                     , MissingH >=1.3
                     , parsec >=3.1
  default-language:    Haskell2010

executable bechdel
  main-is:             app/bechdel.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bechtrek
                     , containers >=0.5
                     , split >=0.2
  default-language:    Haskell2010

executable parse
  main-is:             app/startrek/parse.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bechtrek
                     , directory >=1.2
                     , hxt >= 9.3
                     , HandsomeSoup >= 0.4
                     , MissingH >=1.3
                     , parsec >=3.1
                     , process >=1.4
                     , split >=0.2
  default-language:    Haskell2010

executable repair
  main-is:             app/startrek/repair.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bechtrek
                     , containers >=0.5
  default-language:    Haskell2010

executable yaml
  main-is:             app/yaml.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bechtrek
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , yaml >=0.8
  default-language:    Haskell2010

test-suite bechtrek-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bechtrek
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ronichoudhury/bechtrek
